 * Allow admin templates for snippets to be overridden on a per-model or per-app basis (Sage Abdullah)
 * Allow overriding the base queryset to be used in snippet `IndexView` (Sage Abdullah)
 * Revise alignment and spacing of form fields and sections (Thibaud Colas)
 * Update Wagtail’s type scale so StreamField block labels and field labels are the same size (Thibaud Colas)
 * Fix: Ensure `label_format` on StructBlock gracefully handles missing variables (Aadi jindal)
 * Fix: Adopt a no-JavaScript and more accessible solution for the 'Reset to default' switch to Gravatar when editing user profile (Loveth Omokaro)
 * Fix: Ensure `Site.get_site_root_paths` works on cache backends that do not preserve Python objects (Jaap Roes)
 * Fix: Ignore right clicks on side panel resizer (Sage Abdullah)
 * Fix: Resize in the correct direction for RTL languages with the side panel resizer (Sage Abdullah)
 * Fix: Support creating `StructValue` copies (Tidiane Dia)
 * Fix: Fix image uploads on storage backends that require file pointer to be at the start of the file (Matt Westcott)
 * Fix: Fix "Edit this page" missing from userbar (Satvik Vashisht)
 * Fix: No longer allow invalid duplicate site hostname creation as hostnames and domain names are a case insensitive (Coen van der Kamp)
 * Fix: Image and Document multiple upload update forms now correctly use the progress button (longrunning) behaviour when clicked (Loveth Omokaro)
 * Fix: Prevent audit log report from failing on missing models (Andy Chosak)
 * Fix: Ensure that the privacy collection privacy edit button is styled as a button (Jatin Kumar)
 * Fix: Fix page/snippet cannot proceed a `GroupApprovalTask` if it's locked by someone outside of the group (Sage Abdullah)
 * Fix: Allow manual lock even if `WorkflowLock` is currently applied (Sage Abdullah)
 * Fix: Add missing log information for `wagtail.schedule.cancel` (Stefan Hammer)