@@ -79,6 +79,7 @@ Those improvements were implemented by Albina Starykova as part of an [Outreachy
  * Allow overriding the base queryset to be used in snippet `IndexView` (Sage Abdullah)
  * Revise alignment and spacing of form fields and sections (Thibaud Colas)
  * Update Wagtail’s type scale so StreamField block labels and field labels are the same size (Thibaud Colas)
+ * Allow customising the `search_fields` and search backend via SnippetViewSet (Sage Abdullah)
 
 ### Bug fixes
 
