@@ -83,6 +83,7 @@ class IndexView(
     page_kwarg = "p"
     default_ordering = None
     search_fields = None
+    search_backend_name = "default"
     is_searchable = None
     search_kwarg = "q"
     filters = None
@@ -258,8 +259,8 @@ class IndexView(
         if not self.search_query:
             return queryset
 
-        if class_is_indexed(queryset.model):
-            search_backend = get_search_backend()
+        if class_is_indexed(queryset.model) and self.search_backend_name:
+            search_backend = get_search_backend(self.search_backend_name)
             return search_backend.search(
                 self.search_query, queryset, fields=self.search_fields
             )
