@@ -250,6 +250,9 @@ class FullFeaturedSnippetViewSet(SnippetViewSet):
     index_template_name = "tests/fullfeaturedsnippet_index.html"
     ordering = ["text", "-_updated_at", "-pk"]
 
+    # TODO: When specific search fields are supported in SQLite FTS (see #10217),
+    # specify search_fields or get_search_fields here
+
     def get_history_template(self):
         return "tests/snippet_history.html"
 
@@ -259,6 +262,8 @@ class FullFeaturedSnippetViewSet(SnippetViewSet):
 
 class DraftStateModelViewSet(SnippetViewSet):
     list_filter = ["text", "first_published_at"]
+    search_fields = ["text"]
+    search_backend_name = None
 
 
 class ModeratedModelViewSet(SnippetViewSet):
